# ai-gen-image-detection

./: .gitignore  README.md  default.yaml  main on colab.py  main.ipynb  main.py  mlflow_test.py  pyproject.toml  requirements.txt
exps/generalisation/: generalisation_exp.yaml  generalisation_exp_sd14.yaml  generalisation_exp_sd15.yaml
exps/others/: features_10_20_exp.yaml  features_10_30_exp.yaml  features_20_1_2_exp.yaml  features_20_30_exp.yaml  features_20_40_exp.yaml  features_30_1_3_exp.yaml  features_30_2_3_exp.yaml  features_40_1_2_exp.yaml  full_dataset_exp.yaml
exps_colab/generalisation/: generalisation_exp_sd21.yaml
exps_colab/others/: features_20_30_exp.yaml  full_dataset_exp.yaml
mypipeline/: main on colab.py  main.ipynb  main.py
mypipeline/exps/generalisation/: generalisation_exp.yaml
mypipeline/exps/others/: features_20_1_2_exp.yaml  features_30_2_3_exp.yaml
